# NeuralNetwork

./: CMakeLists.txt  main.cpp
Matrix/: Matrix.cpp  Matrix.h
NeuralNetwork/: NeuralNetwork.cpp  NeuralNetwork.h
